--- a/style.css
+++ b/style.css
@@ -56,9 +56,9 @@ body{
   margin-left: 5px;
   font-size: 21px;
   outline: none;
-  background: #8E49E8;
+  background: #2FEBB2;
   cursor: pointer;
-  border-radius: 3px;
+  border-radius: 10px;
   opacity: 0.6;
   pointer-events: none;
   transition: all 0.3s ease;
@@ -112,14 +112,14 @@ body{
 }
 .footer button{
   padding: 6px 10px;
-  border-radius: 3px;
+  border-radius: 10px;
   border: none;
   outline: none;
   color: #fff;
   font-weight: 400;
   font-size: 16px;
   margin-left: 5px;
-  background: #8E49E8;
+  background: #2FEBB2;
   cursor: pointer;
   user-select: none;
   opacity: 0.6;
